# cmake-project-template

./: CMakeLists.txt  README.md  conanfile.py  config-unix.cmake  config-win32.cmake
.github/workflows/: build-linux.yml  build-win32.yml  unit-test-linux.yml  unix-test-win32.yml
snippet/: CMakeLists.txt
snippet/TestClassTest/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  ltest_test.cpp
